--- a/v9/index.html
+++ b/v9/index.html
@@ -77,6 +77,8 @@
                 cvs.height = window.innerHeight;
             });
 
+            let colorArray = ["#" + createHex(), "#" + createHex(), "#" + createHex(), "#" + createHex()];
+
             class Experiment {
                 constructor(x, y, dx, dy, width) {
                     this.x = x;
@@ -87,9 +89,7 @@
                     this.minWidth = width;
                     this.maxWidth = width * 3;
                     
-                    let rgb = [];
-                    for (let i = 0; i < 3; i++) rgb.push(Math.floor(Math.random() * 255));
-                    this.color = "rgb(" + rgb.join(",") + ")";
+                    this.color = colorArray[Math.floor(Math.random() * colorArray.length)];
                 }
 
                 draw = () => {
